2021-02-22  Phelype Oleinik  <phe.h.o1@gmail.com>

	* pdftex.web: avoid "expansion depth" overflow with \numexpr.

2021-02-17  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]22 for TL21.

	* char-warning-pdftex.ch: doc tweak.
	
2021-02-13  Karl Berry  <karl@freefriends.org>

	* am/pdftex.am (pdftex_ch_srcs): adjust for split enctex changes.

2021-02-06  Akira Kakuto  <kakuto@w32tex.org>

	* pdftex.web: sync \tracingparagraphs fix from tex.web.

2021-01-28  Marcel Fabian Krueger  <tex@2krueger.de>

	* tounicode.c ((un)dumptounicode): use integer, not size_t,
	so .fmt files work across platforms.

2021-01-20  Karl Berry  <karl@freefriends.org>

	* NEWS: update.
	* ptexmac.h (undumpcharptr): use xmalloc, not malloc.

2021-01-20  Marcel Fabian Krueger  <tex@2krueger.de>

	(Un)dump \pdfglyphtounicode assignments in the .fmt.
	* pdftex.web (Dump/Undump pdftex data): call (un)dumptounicode.
	* ptexlib.h ((un)dumptounicode): declare.
	* tounicode.c ((un)dumptounicode): define.
	* ptexmac.h ((un)dumpcharptr): #define here, from writeimg.c
	(using generic_dump).
	* writeimg.c: #defines moved.
	ntg-pdftex mail, 17 Jan 2021 21:47:33.

2021-01-04  Thanh Han The  <hanthethanh@gmail.com>

	* ttf2afm.c (make_name): yet another attempt at filtering
	control characters, since the test font, SourceCodePro (as well
	as many other Mac fonts), actually contains control characters
	(24 and 25), due to UTF-16BE.

2021-01-11  Karl Berry  <karl@freefriends.org>

	* ttf2afm.c (make_name): better to use unsigned char.

2021-01-10  Karl Berry  <karl@freefriends.org>

	* ttf2afm.c (make_name): go back to copying all characters
	to try to placate NetBSD. No harm in it?
	https://tug.org/pipermail/tlbuild/2021q1/004780.html

2021-01-06  Karl Berry  <karl@freefriends.org>

	* ttf2afm.c (make_name): let's exclude iscntrl() per Thanh,
	but accept crlf and tab.
